--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       </div> -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/20250203_110729.jpg" class="d-block w-100" alt="...">
+          <img src="images/Frame 63.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="images/20250203_110911.jpg" class="d-block w-100" alt="...">
+          <img src="images/Frame 63 (1).png" class="d-block w-100" alt="...">
         </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -145,7 +145,7 @@ empowers businesses to thrive in the digital era.
     <!-- Add the horizontal line here -->
     <hr class="mx-auto my-2">
 
-    <div class="text-center my-0">
+    <div class="text-center my-0 compliment">
       <h2>We do our best to provide excellent service</h2>
       <p class="shortCompliment">At EL Waves, we pride ourselves on delivering exceptional service <br>
         by combining technical expertise with a client-first approach.</p>
@@ -207,7 +207,7 @@ empowers businesses to thrive in the digital era.
   </div>
 </section>
 
-<div class="text-center my-5">
+<div class="text-center my-5 compliment">
   <h2>Meet Our Team</h2>
   <p class="shortCompliment">We are frendly , expirenced and we deliver a reliable service on time.</p>
 </div>
@@ -217,15 +217,15 @@ empowers businesses to thrive in the digital era.
   <div class="container">
     <div class="row g-4">
       <!-- Team Member 1 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card team-card team-img">
+      <div class="col-md-3 col-sm-12" data-aos="fade-right">
+        <div class="card team-card">
           <img src="images/Frame 43.png" alt="Jeremy Felix">
           <h5>Manager</h5>
           <p>Jeremy Felix</p>
         </div>
       </div>
       <!-- Team Member 2 -->
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-12" data-aos="fade-right">
         <div class="card team-card">
           <img src="images/Frame 43 (1).png" alt="Justice Ejiofor">
           <h5>Developer</h5>
@@ -233,7 +233,7 @@ empowers businesses to thrive in the digital era.
         </div>
       </div>
       <!-- Team Member 3 -->
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-12" data-aos="fade-right">
         <div class="card team-card">
           <img src="images/Frame 43 (2).png" alt="Anichebe Chioma">
           <h5>Designer</h5>
@@ -241,7 +241,7 @@ empowers businesses to thrive in the digital era.
         </div>
       </div>
       <!-- Team Member 4 -->
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-12" >
         <div class="card team-card">
           <img src="images/Frame 43 (3).png" alt="Iruoma Chinasa">
           <h5>Marketer</h5>
@@ -292,11 +292,13 @@ empowers businesses to thrive in the digital era.
       </div>
     </div>
     <!-- Carousel Indicators -->
-    <div class="d-flex justify-content-center mt-4">
+    <!-- <div class="d-flex justify-content-center mt-4">
       <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
+    </div> -->
+
+
   </div>
 </section>
 
@@ -323,21 +325,22 @@ empowers businesses to thrive in the digital era.
   <div class="container">
     <div class="row">
       <!-- Logo and Description -->
-      <div class="col-md-4">
-        <p class="logo">  <img src="images/IMG_20250201_092941.png" alt="Logo" width="100" height="25" class="d-inline-block align-text-top"> </p>
-        <p>We are a creative company, who works with passion and love. We provide the best services you need. We help you to get better.</p>
+      <div class="col-md-7">
+        <p class="logo">  <img src="images/logo2.png" alt="Logo" width="200" height="50" class="d-inline-block align-text-top"> </p>
+        <p>We are a creative company, who works with passion and love. <br>
+          We provide the best services you need. We help you to get better.</p>
       </div>
 
       <!-- Contact Us -->
-      <div class="col-md-3">
+      <div class="col-md-5 Contact">
         <h5>Contact Us</h5>
-        <p>📍 17402 cariton road, Gulf MS, 45367</p>
-        <p>✉️ ELwaves@gmail.com</p>
-        <p>📞 +234 7067589893</p>
+        <p> <img src="images/mdi_location.png" alt="location icon" width="20px" srcset=""> 17402 cariton road, Gulf MS, 45367</p>
+        <p> <img src="images/ic_baseline-email.png" alt="" width="20px" srcset=""> ELwaves@gmail.com</p>
+        <p> <img src="images/ic_baseline-phone.png" alt="" width="20px" srcset=""> +234 7067589893</p>
       </div>
 
       <!-- Support Links -->
-      <div class="col-md-2">
+      <div class="col-md-7 Support">
         <h5>Support</h5>
         <p><a href="#">Blog</a></p>
         <p><a href="#">Help Center</a></p>
@@ -345,7 +348,7 @@ empowers businesses to thrive in the digital era.
       </div>
 
       <!-- Company Links -->
-      <div class="col-md-2">
+      <div class="col-md-5 company">
         <h5>Company</h5>
         <p><a href="#">Home</a></p>
         <p><a href="#">Page</a></p>
