updated the style of the website

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ empowers businesses to thrive in the digital era.
 </section>
 
 <div class="text-center my-5 compliment">
-  <h2>Meet Our Team</h2>
-  <p class="shortCompliment">We are frendly , expirenced and we deliver a reliable service on time.</p>
+  <h2 class="text-uppercase fw-bold">Our Team</h2> <!-- Updated heading -->
+  <p class="shortCompliment">We are friendly, experienced, and deliver reliable services on time.</p>
 </div>
 
 <!-- Team Section -->
@@ -217,35 +217,43 @@ empowers businesses to thrive in the digital era.
   <div class="container">
     <div class="row g-4">
       <!-- Team Member 1 -->
-      <div class="col-md-3 col-sm-12" data-aos="fade-right">
+      <div class="col-12 col-sm-6 col-md-3 text-center" data-aos="fade-right">
         <div class="card team-card">
-          <img src="images/Frame 43.png" alt="Jeremy Felix">
-          <h5>Manager</h5>
-          <p>Jeremy Felix</p>
+          <img src="images/Frame 43.png" alt="Jeremy Felix" class="card-img-top">
+          <div class="mt-0">
+            <h5 class="fw-bold">Manager</h5>
+            <p class="text-muted">Jeremy Felix</p>
+          </div>
         </div>
       </div>
       <!-- Team Member 2 -->
-      <div class="col-md-3 col-sm-12" data-aos="fade-right">
+      <div class="col-12 col-sm-6 col-md-3 text-center" data-aos="fade-right">
         <div class="card team-card">
-          <img src="images/Frame 43 (1).png" alt="Justice Ejiofor">
-          <h5>Developer</h5>
-          <p>Justice Ejiofor</p>
+          <img src="images/Frame 43 (1).png" alt="Justice Ejiofor" class="card-img-top">
+          <div class="mt-0">
+            <h5 class="fw-bold">Developer</h5>
+            <p class="text-muted">Justice Ejiofor</p>
+          </div>
         </div>
       </div>
       <!-- Team Member 3 -->
-      <div class="col-md-3 col-sm-12" data-aos="fade-right">
+      <div class="col-12 col-sm-6 col-md-3 text-center" data-aos="fade-right">
         <div class="card team-card">
-          <img src="images/Frame 43 (2).png" alt="Anichebe Chioma">
-          <h5>Designer</h5>
-          <p>Anichebe Chioma</p>
+          <img src="images/Frame 43 (2).png" alt="Anichebe Chioma" class="card-img-top">
+          <div class="mt-0">
+            <h5 class="fw-bold">Designer</h5>
+            <p class="text-muted">Anichebe Chioma</p>
+          </div>
         </div>
       </div>
       <!-- Team Member 4 -->
-      <div class="col-md-3 col-sm-12" >
+      <div class="col-12 col-sm-6 col-md-3 text-center">
         <div class="card team-card">
-          <img src="images/Frame 43 (3).png" alt="Iruoma Chinasa">
-          <h5>Marketer</h5>
-          <p>Iruoma Chinasa</p>
+          <img src="images/Frame 43 (3).png" alt="Iruoma Chinasa" class="card-img-top">
+          <div class="mt-0">
+            <h5 class="fw-bold">Marketer</h></h5>
+            <p class="text-muted">Iruoma Chinasa</p>
+          </div>
         </div>
       </div>
     </div>
