updated the responsiveness.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 Pages
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Services</a></li>
-                <li><a class="dropdown-item" href="#">Sign Up</a></li>
-                <li><a class="dropdown-item" href="#">Sign In</a></li>
+                <li><a class="dropdown-item" href="Services.html">Services</a></li>
+                <li><a class="dropdown-item" href="Signup.html">Sign Up</a></li>
+                <li><a class="dropdown-item" href="Login.html">Login In</a></li>
               </ul>
             </li>
             <li class="nav-item">
