--- a/Services.html
+++ b/Services.html
@@ -15,13 +15,22 @@
       <div class="service-box">
         <h4 class="service-title">Web Development</h4>
         <div class="service-image position-relative text-start">
-          <div class="tech-stack1">HTML & CSS</div>
-          <div class="tech-stack2">Bootstrap/Tailwind</div>
-          <div class="tech-stack3">PHP/Node.JS</div>
+          <div class="tech-stack1 d-none d-md-block hide-on-medium">
+            HTML & CSS
+          </div>
+          <!-- Hidden on mobile and tablets -->
+          <div class="tech-stack2 d-none d-md-block hide-on-medium">
+            Bootstrap/Tailwind
+          </div>
+          <!-- Hidden on mobile and tablets -->
+          <div class="tech-stack3 d-none d-md-block hide-on-medium">
+            PHP/Node.JS
+          </div>
+          <!-- Hidden on mobile and tablets -->
           <img
             src="images/AdobeStock1.jpeg"
             alt="Web Development"
-            class="adobe1" />
+            class="adobe1 img-fluid" />
         </div>
       </div>
 
@@ -29,13 +38,22 @@
       <div class="service-box">
         <h4 class="service-title">Mobile Development</h4>
         <div class="service-image position-relative text-start">
-          <div class="tech-stack4">React native/Flutter</div>
-          <div class="tech-stack5">NEXT JS/Dart</div>
-          <div class="tech-stack6">AWS/Firebase</div>
+          <div class="tech-stack4 d-none d-md-block hide-on-medium">
+            React native/Flutter
+          </div>
+          <!-- Hidden on mobile and tablets -->
+          <div class="tech-stack5 d-none d-md-block hide-on-medium">
+            NEXT JS/Dart
+          </div>
+          <!-- Hidden on mobile and tablets -->
+          <div class="tech-stack6 d-none d-md-block hide-on-medium">
+            AWS/Firebase
+          </div>
+          <!-- Hidden on mobile and tablets -->
           <img
             src="images/AdobeStock2.webp"
             alt="Mobile Development"
-            class="adobe1" />
+            class="adobe1 img-fluid" />
         </div>
       </div>
 
@@ -46,7 +64,7 @@
           <img
             src="images/pngwing.com (4).png"
             alt="Product Design"
-            class="adobe" />
+            class="adobe img-fluid" />
         </div>
       </div>
     </div>
@@ -101,7 +119,8 @@
 
           <!-- Contact Us -->
           <div class="col-md-5 Contact">
-            <h5 class="text-danger fw-bold">Contact Us</h5> <!-- Updated heading style -->
+            <h5 class="text-danger fw-bold">Contact Us</h5>
+            <!-- Updated heading style -->
             <p class="d-flex align-items-center">
               <img
                 src="images/mdi_location (1).png"
