--- a/Signup.html
+++ b/Signup.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/signup.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/Signup.css" />
   </head>
   <body>
-    <div class="container my-5"> <!-- Moved heading to the top -->
+    <div class="container my-5">
+      <!-- Moved heading to the top -->
       <div class="row justify-content-center">
         <div class="col-md-6 col-sm-12">
           <div class="card shadow-lg">
@@ -16,29 +17,61 @@
               <form>
                 <h3 class="text-center mb-4">Signup Form</h3>
                 <!-- Toggle Buttons -->
-              <div class="d-flex justify-content-center mb-4">
-                <button type="button" class="btn btn-outline-dark me-2" id="loginToggle">Login</button>
-                <button type="button" class="btn btn-danger" id="signupToggle">Signup</button>
-              </div>
+                <div class="d-flex justify-content-center mb-4">
+                  <button
+                    type="button"
+                    class="btn btn-outline-dark me-2"
+                    id="loginToggle">
+                    Login
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    id="signupToggle">
+                    Signup
+                  </button>
+                </div>
                 <!-- Full Name -->
                 <div class="mb-3">
                   <label for="fullName" class="form-label">Full Name:</label>
-                  <input type="text" class="form-control" id="fullName" placeholder="Enter your full name" required>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="fullName"
+                    placeholder="Enter your full name"
+                    required />
                 </div>
                 <!-- Email -->
                 <div class="mb-3">
                   <label for="email" class="form-label">Email Address:</label>
-                  <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    placeholder="Enter your email"
+                    required />
                 </div>
                 <!-- Password -->
                 <div class="mb-3">
                   <label for="password" class="form-label">Password:</label>
-                  <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    placeholder="Enter your password"
+                    required />
                 </div>
                 <!-- Confirm Password -->
                 <div class="mb-3">
-                  <label for="confirmPassword" class="form-label">Confirm Password:</label>
-                  <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" required>
+                  <label for="confirmPassword" class="form-label"
+                    >Confirm Password:</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="confirmPassword"
+                    placeholder="Confirm your password"
+                    required />
                 </div>
                 <!-- Submit Button -->
                 <div class="d-grid">
@@ -46,7 +79,8 @@
                 </div>
                 <!-- Already have an account -->
                 <p class="text-center mt-3">
-                  Already a member? <a href="login.html" class="text-danger">Login now</a>
+                  Already a member?
+                  <a href="login.html" class="text-danger">Login now</a>
                 </p>
               </form>
             </div>
@@ -55,5 +89,6 @@
       </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
