--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="AboutUs.html">About Us</a>
             </li>
           </ul>
         </div>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="text-center mt-4">
-      <button type="button" class="btn btn-danger">Get Started Now 
+      <button type="button" class="btn btn-danger" href="Signup.html">Get Started Now 
         <img src="images/Vector (1).png" alt="arrow" srcset="">
       </button>
     </div>
